# costumer-churn-prediction

./: LICENSE  README.md  notebook.ipynb  pyproject.toml
