[project]
name = "telco-churn-analysis"
version = "0.1.0"
description = "Customer Churn Prediction"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.0",
    "seaborn>=0.13.2",
    "xgboost>=2.1.3",
]
